--- a/ProyectoTest/Views/Login/Registrarse.cshtml
+++ b/ProyectoTest/Views/Login/Registrarse.cshtml
@@ -9,9 +9,15 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Registrarse</title>
+    <link href="~/Content/StyleSheet1.css" rel="stylesheet" type="text/css" />
     @Styles.Render("~/Content/css")
 </head>
-<body class="bg-dark">
+<body>
+    <div id="video-container">
+        <video autoplay loop muted playsinline>
+            <source src="~/Videos/13.mp4" type="video/mp4">
+        </video>
+    </div>
     <div id="layoutAuthentication">
         <div id="layoutAuthentication_content">
             <main>
