--- a/ProyectoTest/Views/Home/Tienda.cshtml
+++ b/ProyectoTest/Views/Home/Tienda.cshtml
@@ -46,7 +46,7 @@
 
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
         <!-- Navbar Brand-->
-        <a class="navbar-brand ps-3" href="#" style="width:180px !important">Carrito Compras</a>
+        <a class="navbar-brand ps-3" href="@Url.Action("Index","Tienda")" style="width:180px !important">Best Buy</a>
         <!-- Sidebar Toggle-->
         <button class="btn btn-dark text-white btn-categoria" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i> Ver Categorias</button>
 
