--- a/ProyectoTest/Views/Shared/_Layout.cshtml
+++ b/ProyectoTest/Views/Shared/_Layout.cshtml
@@ -5,14 +5,14 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
+    <title>@ViewBag.Title - Mi aplicación ASP.NET MVC</title>
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/PluginsCSS")
 </head>
 <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
         <!-- Navbar Brand-->
-        <a class="navbar-brand ps-3" href="#">Carrito Compras</a>
+        <a class="navbar-brand ps-3" href="@Url.Action("Index","Tienda")">Best Buy</a>
         <!-- Sidebar Toggle-->
         <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
         <ul class="navbar-nav ms-auto me-0 me-md-3 my-2 my-md-0">
@@ -50,14 +50,14 @@
                         <a class="nav-link" href="@Url.Action("Index","Tienda")" target="_blank">
                             <div class="sb-nav-link-icon"><i class="fas fa-store"></i></div>Ver Tienda
                         </a>
-                        <a class="nav-link" href="https://ouo.io/VRgLgZ" target="_blank">
-                            <div class="sb-nav-link-icon"><i class="fas fa-donate"></i></div>Ver Premium
+                        <a class="nav-link" href="@Url.Action("Producto","Home")" target="_blank">
+                            <div class="sb-nav-link-icon"><i class="fas fa-donate"></i></div>Ver Usuarios
                         </a>
                     </div>
                 </div>
                 <div class="sb-sidenav-footer">
                     <div class="small">Logged in as:</div>
-                    Start Bootstrap
+                    Start User
                 </div>
             </nav>
         </div>
@@ -70,7 +70,7 @@
             <footer class="py-4 bg-light mt-auto">
                 <div class="container-fluid px-4">
                     <div class="d-flex align-items-center justify-content-between small">
-                        <div class="text-muted">Copyright &copy; Your Website 2021</div>
+                        <div class="text-muted">Copyright &copy; Your Website 2023</div>
                         <div>
                             <a href="#">Privacy Policy</a>
                             &middot;
