--- a/ProyectoTest/Views/Tienda/Index.cshtml
+++ b/ProyectoTest/Views/Tienda/Index.cshtml
@@ -5,11 +5,11 @@
 }
 
 <div class="row mt-5">
-    <div class="bg-secondary py-3">
+    <div class="bg-primary py-3">
         <div class="container my-3">
             <div class="text-center text-white">
-                <h1 class="display-4 fw-bolder">Compra con estilo </h1>
-                <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
+                <h1 class="display-4 fw-bolder">Compra con Estilo </h1>
+                <p class="lead fw-normal text-white-50 mb-0">Todo lo que necesitas en un solo lugar</p>
             </div>
         </div>
     </div>
